deployment/template_deployment.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: mixer-backend
  namespace: mixer
spec:
  replicas: 3
  template:
    metadata:
      labels:
        app: mixer-backend
    spec:
      volumes:
        - name: google-cloud-key
          secret:
            secretName: bigquery-key
        - name: schema-mapping
          configMap:
            name: schema-mapping
        - name: nginx-config
          configMap:
            name: nginx-config
      containers:
        - name: esp
          image: gcr.io/endpoints-release/endpoints-runtime:1
          args: [
            "-n", "/etc/nginx/custom/nginx.conf",
            "--http_port", "8081",
            "-a", "grpc://127.0.0.1:12345",
            #_d|"--service", "datacommons.endpoints.PROJECT_ID.cloud.goog",
            #_c|"--service", "DOMAIN",
            "--rollout_strategy", "managed",
            "-z", "healthz",
            "--cors_preset", "basic",
          ]
          # HEALTH CHECK START
          # Used by ingress to perform health check
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8081
          ports:
            - containerPort: 8081
          volumeMounts:
          - mountPath: /etc/nginx/custom
            name: nginx-config
            readOnly: true
        - name: mixer
          image: IMAGE
          imagePullPolicy: Always
          args: [
            "--bq_dataset", "google.com:datcom-store-dev.dc_v3_clustered",
            "--bt_table", "dc20",
            "--bt_project", "google.com:datcom-store-dev",
            "--bt_instance", "prophet-cache",
            "--project_id", "PROJECT_ID",
          ]
          ports:
            - containerPort: 12345
          volumeMounts:
            - name: google-cloud-key
              mountPath: /var/secrets/google
            - name: schema-mapping
              mountPath: /mixer/config/mapping
