deployment/mixer-grpc-esp.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# GKE LoadBalancer service to expose mixer gRPC.
apiVersion: v1
kind: Service
metadata:
  name: mixer-service
  namespace: mixer
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 8081
      protocol: TCP
  selector:
    app: mixer-grpc
---
# Mixer service backend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mixer-grpc
  namespace: mixer
spec:
  replicas: 10
  selector:
      matchLabels:
        name: mixer-grpc
  template:
    metadata:
      labels:
        app: mixer-grpc
        name: mixer-grpc
    spec:
      volumes:
        - name: google-cloud-key
          secret:
            secretName: mixer-robot-key
        - name: nginx-config
          configMap:
            name: nginx-config
      containers:
        - name: esp
          image: gcr.io/endpoints-release/endpoints-runtime:1
          args: [
              "--service", "datacommons.endpoints.datcom-mixer-staging.cloud.goog",
              "--http_port", "8081",
              "--backend", "grpc://127.0.0.1:12345",
              "--nginx_config", "/etc/nginx/custom/nginx.conf",
              "--cors_preset", "basic",
              "--rollout_strategy", "managed",
              "--healthz", "healthz",
            ]
          resources:
            requests:
              memory: "1G"
              cpu: "100m"
            limits:
              memory: "2G"
              cpu: "300m"
          # HEALTH CHECK START
          # Used by ingress to perform health check
          readinessProbe:
            httpGet:
              path: /healthz
              port: 8081
          ports:
            - containerPort: 8081
          volumeMounts:
            - mountPath: /etc/nginx/custom
              name: nginx-config
              readOnly: true
        - name: mixer
          image: gcr.io/datcom-ci/datacommons-mixer:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "6G"
              cpu: "1000m"
            limits:
              memory: "10G"
              cpu: "1500m"
          args:
            [
              "--bq_dataset", "BIGQUERY",
              "--bt_table", "BIGTABLE",
              "--bt_project", "google.com:datcom-store-dev",
              "--bt_instance", "prophet-cache",
              "--project_id", "PROJECT_ID",
            ]
          ports:
            - containerPort: 12345
          volumeMounts:
            - name: google-cloud-key
              mountPath: /var/secrets/google
