deployment/mixer-grpc.yaml
# Copyright 2019 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     https://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

# GKE LoadBalancer service to expose mixer gRPC.
apiVersion: v1
kind: Service
metadata:
  name: mixer-service
  namespace: mixer
spec:
  type: LoadBalancer
  ports:
    - name: http
      port: 80
      targetPort: 12345
      protocol: TCP
  selector:
    app: mixer-grpc
---
# Mixer service backend
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mixer-grpc
  namespace: mixer
spec:
  replicas: 10
  selector:
      matchLabels:
        app: mixer-grpc
  template:
    metadata:
      labels:
        app: mixer-grpc
    spec:
      volumes:
        - name: google-cloud-key
          secret:
            secretName: mixer-robot-key
      containers:
        - name: mixer
          image: gcr.io/datcom-ci/datacommons-mixer:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "6G"
              cpu: "1000m"
            limits:
              memory: "10G"
              cpu: "1500m"
          args:
            [
              "--bq_dataset", "BIGQUERY",
              "--bt_table", "BIGTABLE",
              "--bt_project", "google.com:datcom-store-dev",
              "--bt_instance", "prophet-cache",
              "--project_id", "PROJECT_ID",
            ]
          ports:
            - containerPort: 12345
          volumeMounts:
            - name: google-cloud-key
              mountPath: /var/secrets/google
