deployment/result.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mixer
---
apiVersion: v1
kind: Service
metadata:
  name: mixer-service-dev
  namespace: mixer
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: 8081
  selector:
    app: mixer-grpc
  type: NodePort
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mixer-grpc-dev
  namespace: mixer
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mixer-grpc
  template:
    metadata:
      labels:
        app: mixer-grpc
    spec:
      containers:
      - args:
        - --bq_dataset
        - $(BIG_QUERY)
        - --bt_table
        - $(BIG_TABLE)
        - --bt_project
        - google.com:datcom-store-dev
        - --bt_instance
        - prophet-cache
        - --project_id
        - $(PROJECT_ID)
        image: gcr.io/datcom-ci/datacommons-mixer:latest
        imagePullPolicy: Always
        livenessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:12345
          initialDelaySeconds: 10
          periodSeconds: 5
        name: mixer
        ports:
        - containerPort: 12345
        readinessProbe:
          exec:
            command:
            - /bin/grpc_health_probe
            - -addr=:12345
          periodSeconds: 5
        resources:
          limits:
            cpu: 500m
            memory: 2G
      - args:
        - --service_account_key
        - /var/secrets/google/service-account-key.json
        - --non_gcp
        - --service
        - $(SERVICE_NAME)
        - --http_port
        - "8081"
        - --backend
        - grpc://127.0.0.1:12345
        - --cors_preset
        - basic
        - --rollout_strategy
        - managed
        - --healthz
        - healthz
        image: gcr.io/endpoints-release/endpoints-runtime:1
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8081
          initialDelaySeconds: 10
          periodSeconds: 5
        name: esp
        ports:
        - containerPort: 8081
        readinessProbe:
          httpGet:
            path: /healthz
            port: 8081
          periodSeconds: 5
        resources:
          limits:
            cpu: 100m
            memory: 1G
        volumeMounts:
        - mountPath: /var/secrets/google
          name: secret-volume
          readOnly: true
      serviceAccountName: mixer-ksa
      volumes:
      - name: secret-volume
        secret:
          secretName: service-account-key
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.global-static-ip-name: mixer-ip
    networking.gke.io/managed-certificates: mixer-certificate
  name: mixer-ingress-dev
  namespace: mixer
spec:
  rules:
  - http:
      paths:
      - backend:
          serviceName: mixer-service-dev
          servicePort: 80
        path: /*
